trocado a cor do background

--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -2,7 +2,7 @@ body {
     font-family: "Poppins", sans-serif;
     max-width: 1280px;
     margin: 0 auto;
-    background-color: #fcf48e;
+    background-color: #faf16e;
     color: #333333;
 }
 
